# mlcpp

./: CMakeLists.txt  CMakeSettings.json  README.md  backprop.cpp  backprop.h  main.cpp  testcpp.cpp
py/: network.py  network2.py  test.py
